--- a/Src/Microsoft.WindowsDeviceRecoveryTool.LogicCommon/Microsoft.WindowsDeviceRecoveryTool.LogicCommon.csproj
+++ b/Src/Microsoft.WindowsDeviceRecoveryTool.LogicCommon/Microsoft.WindowsDeviceRecoveryTool.LogicCommon.csproj
@@ -32,33 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ImageCommon">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\ImageCommon.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsAzure.Storage">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsAzure.Storage.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.Common">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.FfuFileReader">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.FfuFileReader.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.Localization">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.Localization.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.Model">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.Model.dll</HintPath>
-    </Reference>
-    <Reference Include="Nokia.Lucid">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Nokia.Lucid.dll</HintPath>
-    </Reference>
-    <Reference Include="Nokia.Mira">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Nokia.Mira.dll</HintPath>
-    </Reference>
-    <Reference Include="SoftwareRepository">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\SoftwareRepository.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -138,6 +111,44 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\default_device.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ImageCommon\ImageCommon.csproj">
+      <Project>{37ba0760-0c2c-4d4f-993f-94be80cecf40}</Project>
+      <Name>ImageCommon</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.WindowsAzure.Storage\Microsoft.WindowsAzure.Storage.csproj">
+      <Project>{d6981d57-352e-4d09-999e-00a422c840ee}</Project>
+      <Name>Microsoft.WindowsAzure.Storage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.Common\Microsoft.WindowsDeviceRecoveryTool.Common.csproj">
+      <Project>{64a43b64-7647-425c-b0e6-2e27da6dbdda}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.FfuFileReader\Microsoft.WindowsDeviceRecoveryTool.FfuFileReader.csproj">
+      <Project>{5b39bf96-8c2f-4fdf-a82d-603010a30846}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.FfuFileReader</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.Localization\Microsoft.WindowsDeviceRecoveryTool.Localization.csproj">
+      <Project>{081f084d-70ab-42aa-a1e7-460f52620ca7}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.Localization</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.Model\Microsoft.WindowsDeviceRecoveryTool.Model.csproj">
+      <Project>{0fcb723b-55fa-4794-8262-8ec9d399f6e3}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Nokia.Lucid\Nokia.Lucid.csproj">
+      <Project>{0ba1a6f4-e417-4ab3-ab1d-264cc7735f25}</Project>
+      <Name>Nokia.Lucid</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Nokia.Mira\Nokia.Mira.csproj">
+      <Project>{a3fd0999-a422-44d1-9c14-23a16af09d58}</Project>
+      <Name>Nokia.Mira</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SoftwareRepository\SoftwareRepository.csproj">
+      <Project>{67fb07f5-df73-45d6-8efd-9c76838949bf}</Project>
+      <Name>SoftwareRepository</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
