--- a/Src/Microsoft.WindowsDeviceRecoveryTool.StateMachine/Microsoft.WindowsDeviceRecoveryTool.StateMachine.csproj
+++ b/Src/Microsoft.WindowsDeviceRecoveryTool.StateMachine/Microsoft.WindowsDeviceRecoveryTool.StateMachine.csproj
@@ -32,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.Common">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.Common.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +61,12 @@
     <Compile Include="Transitions\PropagateErrorTransition.cs" />
     <Compile Include="Transitions\PropagateStateStatusTransition.cs" />
     <Compile Include="Transitions\StateStatusTransition.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.Common\Microsoft.WindowsDeviceRecoveryTool.Common.csproj">
+      <Project>{64a43b64-7647-425c-b0e6-2e27da6dbdda}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
