--- a/Src/Microsoft.WindowsDeviceRecoveryTool.Styles/Microsoft.WindowsDeviceRecoveryTool.Styles.csproj
+++ b/Src/Microsoft.WindowsDeviceRecoveryTool.Styles/Microsoft.WindowsDeviceRecoveryTool.Styles.csproj
@@ -33,12 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.Common">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.Localization">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.Localization.dll</HintPath>
-    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -133,6 +127,16 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.Common\Microsoft.WindowsDeviceRecoveryTool.Common.csproj">
+      <Project>{64a43b64-7647-425c-b0e6-2e27da6dbdda}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.Localization\Microsoft.WindowsDeviceRecoveryTool.Localization.csproj">
+      <Project>{081f084d-70ab-42aa-a1e7-460f52620ca7}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.Localization</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
