--- a/Src/Microsoft.WindowsDeviceRecoveryTool.ZebraAdaptation/Microsoft.WindowsDeviceRecoveryTool.ZebraAdaptation.csproj
+++ b/Src/Microsoft.WindowsDeviceRecoveryTool.ZebraAdaptation/Microsoft.WindowsDeviceRecoveryTool.ZebraAdaptation.csproj
@@ -32,30 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FFUComponents">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\FFUComponents.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.Common">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.Core">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.Localization">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.Localization.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.LogicCommon">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.LogicCommon.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.Lucid">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.Lucid.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.Model">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.Model.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsDeviceRecoveryTool.OemAdaptation">
-      <HintPath>C:\Program Files (x86)\Microsoft Care Suite\Windows Device Recovery Tool\Microsoft.WindowsDeviceRecoveryTool.OemAdaptation.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -76,6 +52,40 @@
     <EmbeddedResource Include="Properties\Resources.resources" />
     <EmbeddedResource Include="Resources\ZebraTC700J.tif" />
     <EmbeddedResource Include="Resources\Zebra_Logo.JPG" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FFUComponents\FFUComponents.csproj">
+      <Project>{928157d7-3130-4324-9f56-b04dba29818a}</Project>
+      <Name>FFUComponents</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.Common\Microsoft.WindowsDeviceRecoveryTool.Common.csproj">
+      <Project>{64a43b64-7647-425c-b0e6-2e27da6dbdda}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.Core\Microsoft.WindowsDeviceRecoveryTool.Core.csproj">
+      <Project>{55a80c0e-e3d4-43eb-8c91-d6ef18bfa9dc}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.Localization\Microsoft.WindowsDeviceRecoveryTool.Localization.csproj">
+      <Project>{081f084d-70ab-42aa-a1e7-460f52620ca7}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.Localization</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.LogicCommon\Microsoft.WindowsDeviceRecoveryTool.LogicCommon.csproj">
+      <Project>{2adf7f14-aa94-4a70-b28f-668964626e8f}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.LogicCommon</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.Lucid\Microsoft.WindowsDeviceRecoveryTool.Lucid.csproj">
+      <Project>{adee4bcd-be8f-4ec5-8d00-aa6442b86415}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.Lucid</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.Model\Microsoft.WindowsDeviceRecoveryTool.Model.csproj">
+      <Project>{0fcb723b-55fa-4794-8262-8ec9d399f6e3}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.WindowsDeviceRecoveryTool.OemAdaptation\Microsoft.WindowsDeviceRecoveryTool.OemAdaptation.csproj">
+      <Project>{64089e80-33ff-4d5d-be3b-74072c27ab00}</Project>
+      <Name>Microsoft.WindowsDeviceRecoveryTool.OemAdaptation</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
