--- a/Src/ufphostm/ufphostm.csproj
+++ b/Src/ufphostm/ufphostm.csproj
@@ -34,6 +34,12 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>strongkey.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualC" />
     <Reference Include="System" />
@@ -43,6 +49,7 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Microsoft\Windows\Flashing\Platform\CPlatform.cs" />
     <Compile Include="ModuleRnD.cs" />
     <Compile Include="ATL\CAtlComModule.cs" />
     <Compile Include="ATL\CAtlReleaseManagedClassFactories.cs" />
@@ -79,6 +86,9 @@
     <Compile Include="Microsoft\Windows\Flashing\Platform\NativeFlashingPlatform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="std\bad_alloc.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="strongkey.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
